--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Index Page of the MVC Application (Lab1)</h1>
-    <form>
+    <h1>Index Page of the MVC Application (Lab2)</h1>
+    <form onsubmit="validateMyForm()">
         <fieldset>
             <legend>Personal Information:</legend>
             <label for="firstName">First Name:</label>
@@ -32,7 +32,8 @@
             <input type="radio" name="gender" id="female" value="female">
         </fieldset>
         
-        <input type="submit" value="Send" onclick="validateMyForm()"/>
+        <input type="submit" value="Send"/>
     </form>
 </body>
 </html>
+<script src="myFirstScripts.js"></script>
