--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Index Page of the MVC Application (Lab2)</h1>
+    <h1>Index Page of the MVC Application (Lab1)</h1>
     <form onsubmit="validateMyForm()">
         <fieldset>
             <legend>Personal Information:</legend>
@@ -27,13 +27,13 @@
         <fieldset>
             <legend>Gender:</legend>
             <label for="male">Male</label>
-            <input type="radio" name="gender" id="male" value="male" checked>
+            <input type="radio" name="gender" id="male" value="male" checked onclick="toggleFM()">
             <label for="female">Female</label>
-            <input type="radio" name="gender" id="female" value="female">
+            <input type="radio" name="gender" id="female" value="female" onclick="toggleFM()">
         </fieldset>
         
         <input type="submit" value="Send"/>
     </form>
 </body>
 </html>
-<script src="myFirstScripts.js"></script>
+<script type="text/javascript" src="myFirstScripts.js"></script>
