--- a/HTML & CSS & JS/index.html
+++ b/HTML & CSS & JS/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Index Page of the MVC Application (Lab1)</h1>
-    <form>
+    <form onsubmit="validateMyForm()">
         <fieldset>
             <legend>Personal Information:</legend>
             <label for="firstName">First Name:</label>
@@ -27,12 +27,13 @@
         <fieldset>
             <legend>Gender:</legend>
             <label for="male">Male</label>
-            <input type="radio" name="gender" id="male" value="male" checked>
+            <input type="radio" name="gender" id="male" value="male" checked onclick="toggleFM()">
             <label for="female">Female</label>
-            <input type="radio" name="gender" id="female" value="female">
+            <input type="radio" name="gender" id="female" value="female" onclick="toggleFM()">
         </fieldset>
         
-        <input type="submit" value="Send" onclick="validateMyForm()"/>
+        <input type="submit" value="Send"/>
     </form>
 </body>
 </html>
+<script type="text/javascript" src="myFirstScripts.js"></script>
